remove annaying outline

--- a/src/components/song/Song.styl
+++ b/src/components/song/Song.styl
@@ -19,6 +19,8 @@ $song-bottom-margin= 3px
         color: tomato
     .iconPlay
       transform: translateX(-30px)
+  button
+    outline: none
 
 
 .shortlisted
