--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -1,11 +1,9 @@
 @import 'colours'
 
-$button-grey= #aaa
-$button-red= tomato
 $button-size= 35px
 $button-size-small= 20px
 
-.circleButton
+.circle-button
   height: $button-size
   background: 0
   border: none
@@ -15,11 +13,12 @@ $button-size-small= 20px
   text-align: center
   border-radius: $button-size
   svg
+    overflow: visible
     width: $button-size
     height: $button-size
     fill: white
     color: $button-grey
   &:hover
     svg
-      filter: drop-shadow(0 3px 2px rgba(0,0,0,0.2))
+      filter: drop-shadow(0 2px 2px rgba(0,0,0,0.2))
       color: $button-red
