--- a/src/components/player/player.styl
+++ b/src/components/player/player.styl
@@ -1,10 +1,17 @@
 @import '../../styles/colours'
+@import '../../styles/helpers'
 
 .playerDisplay
   display: flex
   flex: 1
   justify-content: center
   align-items: center
+
+.currentSong
+  display: flex
+  flex-direction: column
+  flex: 1
+  text-align: center
 
 .song
   font-weight: bold
