--- a/src/components/player/control_panel.styl
+++ b/src/components/player/control_panel.styl
@@ -4,6 +4,8 @@
   display: flex
   align-items: center
   margin-left: 2em
+  flex: 1
+  justify-content: center
 
 .svg
   overflow: visible
@@ -47,6 +49,7 @@ $button-size= 35px
 .play
   position: relative
   left: 3px
+  top: 1px
 
 .button-mode
   @extend .button-small
