--- a/src/index.ejs
+++ b/src/index.ejs
@@ -27,7 +27,8 @@
     <style>
       body {
         font-family: 'Open Sans', sans-serif;
-        color: #4a4a4a
+        color: #4a4a4a;
+        margin: 0;
       }
     </style>
   <div id="app"></div>
